# cir-tac

./: DockerfileMacOS
.github/workflows/: build.yml  build_clangir_docker.yml  build_clangir_docker_linux.yml  build_clangir_docker_linux_legacy.yml  build_clangir_docker_macos.yml  ci.yml  clangir-version.json  release.yml
docker/: Dockerfile  DockerfileMacOS  DockerfileUbuntuLegacy  buildClangir.sh
include/cir-tac/: Deserializer.h  EnumsDeserializer.h  EnumsDeserializerGen.h
proto/: CMakeLists.txt
src/: CMakeLists.txt  Deserializer.cpp  EnumsDeserializerGen.cpp  xtrabuilders.cpp.inc
tools/: CMakeLists.txt
tools/cir-deser-proto/: CMakeLists.txt  cir-deser-proto.cpp
tools/cir-ser-proto/: cir-ser-proto.cpp
tools/cir-test-cirgen/: CMakeLists.txt  cir-test-cirgen.cpp
